package protocol.request;

public class Login {

}
