@startuml

title __CHATSERVER's Class Diagram__\n

  namespace database {
    class database.AccountManager {
    }
  }
  

  namespace database {
    class database.DatabaseControl {
    }
  }
  

  namespace database {
    class database.MysqlUser {
    }
  }
  

  namespace database {
    class database.User {
    }
  }
  

  namespace protocol {
    class protocol.Message {
    }
  }
  

  namespace protocol {
    namespace request {
      class protocol.request.Login {
      }
    }
  }
  

  namespace protocol {
    namespace request {
      interface protocol.request.Request {
      }
    }
  }
  

  namespace server {
    class server.ChatClientHandler {
    }
  }
  

  namespace server {
    class server.ChatClientInHandler {
    }
  }
  

  namespace server {
    class server.ChatClientOutHandler {
    }
  }
  

  namespace server {
    class server.ChatServer {
    }
  }
  

  namespace server {
    class server.DirectMessage {
    }
  }
  

  namespace server {
    class server.GroupChat {
    }
  }
  

  namespace server {
    class server.Server {
    }
  }
  

  database.DatabaseControl o-- database.AccountManager : accountManager
  database.DatabaseControl o-- database.MysqlUser : mysqlUser
  server.ChatClientHandler o-- server.ChatClientHandler.Output : chatOut
  server.ChatClientHandler o-- server.ChatClientHandler.ChatQueue : chatQueue
  server.ChatClientHandler o-- server.ChatServer : chatServer
  server.ChatClientInHandler .up.|> java.lang.Runnable
  server.ChatClientInHandler o-- server.ChatClientHandler : chatClientHandler
  server.ChatClientOutHandler .up.|> java.lang.Runnable
  server.ChatClientOutHandler o-- server.ChatClientHandler : client
  server.ChatClientOutHandler o-- protocol.Message : message
  server.ChatServer o-- server.ChatServer.ChatQueue : chatQueue
  server.DirectMessage .up.|> java.lang.Runnable
  server.DirectMessage o-- server.ChatServer : chatServer
  server.DirectMessage o-- protocol.Message : message


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
